FIX: Increase spacing between fields (#182)
#182

--- a/pages/Search/Search.css
+++ b/pages/Search/Search.css
@@ -280,6 +280,7 @@ search {
 
 .search-form {
 
+  gap:             0.5em;
   max-inline-size: 35em;
 
   & button {
